--- a/Flyweight Pattern/style.css
+++ b/Flyweight Pattern/style.css
@@ -11,3 +11,33 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.product-catalog {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.product {
+  width: 200px;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.product img {
+  width: 100%;
+  height: auto;
+}
+
+#product-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#catalog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
