initial mediator example

--- a/Mediator Pattern/style.css
+++ b/Mediator Pattern/style.css
@@ -11,3 +11,39 @@
   --color-four: #d1d3c4;
   --color-five: #dfe0dc;
 }
+
+#chat {
+  width: 300px;
+  margin: 0 auto;
+}
+
+#chat-messages {
+  height: 200px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+#chat-input {
+  margin-top: 10px;
+}
+
+#message-input {
+  width: 200px;
+  padding: 5px;
+}
+
+#send-button {
+  padding: 5px 10px;
+  margin-left: 5px;
+}
+
+#notification-button {
+  display: block;
+  margin-top: 10px;
+  padding: 5px 10px;
+}
+
+#user-list {
+  margin-top: 10px;
+}
